force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/Apttus_Config2__FrequencyConversionRate__c.object-meta.xml
<CustomObject>
    <description>Represents the conversion rates used to convert pricing from one frequency or unit of measure to another frequency or unit of measure</description>
    <label>Frequency/UOM Conversion Rate</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Conversion Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequency/UOM Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>