force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__ConversionFactor__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConversionFactor__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The conversion factor to apply to convert one frequency to another</description>
    <label>Conversion Factor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>13</scale>
    <type>Number</type>
</CustomField>