force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__FromFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FromFrequency__c</fullName>
    <description>The frequency to convert from</description>
    <label>From Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>