force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__FromUom__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FromUom__c</fullName>
    <description>The unit of measure to convert from</description>
    <inlineHelpText>The unit of measure to convert from</inlineHelpText>
    <label>From Uom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>TB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>