force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamily__c</fullName>
    <description>The product family</description>
    <inlineHelpText>The product family</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>