force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__ProductFamilyInternal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamilyInternal__c</fullName>
    <description>The product family for internal use</description>
    <externalId>true</externalId>
    <inlineHelpText>The product family for internal use</inlineHelpText>
    <label>Product Key (Internal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>