force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product</description>
    <inlineHelpText>ID of the associated product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Frequency/UOM Conversion Rates</relationshipLabel>
    <relationshipName>FrequencyUOMConversionRates</relationshipName>
    <type>Lookup</type>
</CustomField>