force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The conversion metric type</description>
    <inlineHelpText>The conversion metric type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequency</fullName>
                <default>true</default>
                <label>Frequency</label>
            </value>
            <value>
                <fullName>Unit Of Measure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>