force-app/main/default/objects/Apttus_Config2__FrequencyConversionRate__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Type__c</columns>
    <columns>Apttus_Config2__FromFrequency__c</columns>
    <columns>Apttus_Config2__ToFrequency__c</columns>
    <columns>Apttus_Config2__FromUom__c</columns>
    <columns>Apttus_Config2__ToUom__c</columns>
    <columns>Apttus_Config2__ProductFamily__c</columns>
    <columns>Apttus_Config2__ProductId__c</columns>
    <columns>Apttus_Config2__ConversionFactor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>